--- a/package.json
+++ b/package.json
@@ -21,13 +21,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-<<<<<<< Updated upstream
     "mongoose": "^5.9.13",
-    "reactstrap": "^8.4.1"
-=======
-    "moment": "^2.25.3",
-    "mongoose": "^5.9.13"
->>>>>>> Stashed changes
+    "reactstrap": "^8.4.1",
+    "moment": "^2.25.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
