--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
+    "multer": "^1.4.2",
     "reactstrap": "^8.4.1"
   },
   "devDependencies": {
