--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jw-paginate": "^1.0.4",
     "moment": "^2.25.3",
     "mongoose": "^5.9.13",
+    "multer": "^1.4.2",
     "reactstrap": "^8.4.1"
   },
   "devDependencies": {
