--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.25.3",
     "mongoose": "^5.9.13",
     "multer": "^1.4.2",
+    "react-bootstrap-sweetalert": "^5.1.9",
     "reactstrap": "^8.4.1"
   },
   "devDependencies": {
