--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^5.9.13",
     "multer": "^1.4.2",
     "react-bootstrap-sweetalert": "^5.1.9",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
