--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "config": "^3.3.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "disable-browser-back-navigation": "^0.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "jw-paginate": "^1.0.4",
