--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.25.3",
     "mongoose": "^5.9.13",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.6",
     "react-bootstrap-sweetalert": "^5.1.9",
     "reactstrap": "^8.4.1",
     "sweetalert": "^2.1.2"
