--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "shopping_cart",
   "version": "1.0.0",
   "description": "",
-  "main": "api/index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/index.js",
-    "client": "npm run start --prefix client",
-    "api": "nodemon server/index.js",
-    "dev": "concurrently \"npm run api\" \"npm run start --prefix client\""
+    "client-install": "npm install --prefix client",
+    "start": "node server.js",
+    "client": "npm start --prefix client",
+    "server": "nodemon server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+
+
   },
   "author": "HINT",
   "license": "ISC",
